# health_insurance_project

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  COMMANDS_CHEATSHEET.md  CONTRIBUTING.md  CV_VS_PROJECT_SKILLS_ANALYSIS.md  DEPLOYMENT_ROADMAP.md  Dockerfile  ENTERPRISE_SUMMARY.txt  LICENSE  MERGE_VERIFICATION_COMPLETE.md  Makefile  Master_Run_Pipeline.py  PIPELINE_ANALYSIS.ipynb  PRODUCTION_READINESS_ASSESSMENT.md  PROFESSIONAL_ENHANCEMENT_GUIDE.md  QUICK_REFERENCE.md  README.md  README_PRODUCTION.md  bupa_insurance_project.code-workspace  environment.yml  fix_protobuf.sh  pre_cache_ivy.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_pipeline.py  run_pipeline.py  run_pipeline_clean.sh  sample.ipynb  sample2.ipynb  setup_ivy_cache.sh  setup_professional_portfolio.sh
.devcontainer/: devcontainer.json
.mlflow_venv/: pyvenv.cfg
02_Silver_Layer/: utils_silver.py
03_Gold_Layer/: 01_gold_notebook.ipynb
Data_Collection/: data_collection_from_kaggle.ipynb  synthetic_data_generator.ipynb
Master_Pipeline/: 00_run_all_pipeline.ipynb
Project_Documentation/: ENTERPRISE_READINESS_ASSESSMENT.md  PIPELINE_EXECUTION_ANALYSIS.md  PROJECT_OVERVIEW.md
Project_Report_and_Summary/: AUDIT_SUMMARY.md
_02_Silver/: utils_silver.py
_03_Gold/: Gold_layer_documentation.md  Gold_layer_documentation.txt
artifacts/: gold_contract.json
config/: config.py
run_reports/: run_report_20251209_225622.json  run_report_20251209_225622.md  run_report_20251217_020540.json  run_report_20251217_020540.md  run_report_20251217_172458.json  run_report_20251217_172458.md  run_report_20251217_172827.json  run_report_20251217_172827.md  run_report_20251217_172954.json  run_report_20251217_172954.md  run_report_20251217_174117.json  run_report_20251217_174117.md  run_report_20251217_174341.json  run_report_20251217_174341.md  run_report_20251218_211604.json  run_report_20251218_211604.md  run_report_20251218_224418.json  run_report_20251218_224418.md  run_report_20251218_224654.json  run_report_20251218_224654.md  run_report_20251218_224802.json  run_report_20251218_224802.md  run_report_20251218_224932.json  run_report_20251218_224932.md  run_report_20251218_233836.json  run_report_20251218_233836.md  run_report_20251219_000221.json  run_report_20251219_000221.md  run_report_20251219_131623.json  run_report_20251219_131623.md  run_report_20251219_132736.json  run_report_20251219_132736.md  run_report_20251219_135344.json  (+29 more)
src/: data_utils.py  (+3 more)
(+1782 files in other folders)
